# minispot

./: README.md  commands.sh
champ_base/: CMakeLists.txt
champ_base/include/: IK_Controller.h  quadruped_controller.h
champ_base/src/: IK.cpp  custom_ik.cpp  inverse_kinematics_node.cpp  quadruped_controller.cpp
quadruped_robot/: README.md  package.xml  setup.py
quadruped_robot/config/: dynamixel_joints_controller.yaml  dynamixel_trajectory_controller.yaml  spot_gait.yaml  spot_joints.yaml  spot_links.yaml
quadruped_robot/launch/: control_robot.launch.py  ik.launch.py  launch_sim.launch.py  rsp.launch.py  servo_controller_node.launch.py  servo_controller_node_launch.py  spot_bringup.launch.py  spot_controller.launch.py  spot_description.launch.py  spot_gazebo.launch.py
quadruped_robot/quadruped_robot/: camera.py  example.py  ik_controller.py  joys.py  joystick_controller.py  kinematics.py  kinematics2.py  leg_ik_controller.py  servo_controller_node.py  sonar.py  sonarCamera.py  test.py  virtual_joy_stick.py
quadruped_robot/rviz/: mini_spot.rviz  rviz.rviz
quadruped_robot/scripts/: leg_ik_controller.py
quadruped_robot/src/: dynamixel_hardware.cpp  dynamixel_hardware.hpp
quadruped_robot/urdf/: accessories.urdf.xacro  asus_camera.urdf.xacro  champ.urdf.xacro  champ_arm.urdf  champ_velodyne.urdf  hokuyo_utm30lx.urdf.xacro  new.urdf.xacro  new2.urdf.xacro  old_spot.urdf.xacro  properties.urdf.xacro  spot.urdf.xacro  spotmicroai_gen_ros.urdf.xacro  spotmicroai_gen_ros.xacro
quadruped_robot/worlds/: 1st_floor.world  env.world
spok_rob/: package.xml  setup.cfg  setup.py
spok_rob/spok_rob/: gyro_node.py  joint_servo_controller.py  move_node.py
spot_exec/: CMakeLists.txt  package.xml
spot_exec/config/: spot_control.yaml
spot_exec/launch/: gazebo.launch.py
spot_exec/models/1st_floor/: model.config  model.sdf
