<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>quadruped_robot</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for controlling and simulating a quadruped robot in RViz and using ros2_control.</description>

  <maintainer email="theotime.perrichet@cpe.fr">Theotime Perrichet</maintainer>
  <author email="theotime.perrichet@cpe.fr">Theotime Perrichet</author>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
