<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>quadruped_robot</name>
  <version>0.0.0</version>
  <description>A ROS 2 package for controlling and simulating a quadruped robot in RViz and using ros2_control.</description>

  <maintainer email="jagadeesh.d.pradhani@gmail.com">Jagadeesh Pradhani</maintainer>
  <author email="theotime.perrichet@cpe.fr">Theotime Perrichet</author>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gazebo_ros</depend>


  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
